# FinalProject

./: .breakpoints  Linear.py  backandforth.py  background.py  camera.py  demo.html  distance.py  final_project.cgi  final_project.html  final_project.py  final_project_background.py  index.html  photoresistor.py  phototest.py  pyproject.toml  rotational.py  rpi_camera.py  server.py  spaz.py  steppertest.py  test.py  trig.py
