[tool.poetry]
name = "repl_python3_FinalProject"
version = "0.1.0"
description = ""
authors = ["jzheng10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"
odrive = "^0.5.4"
ws4py = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
